# arangodb

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSES-OTHER-COMPONENTS.md  VERSION  VERSIONS
Documentation/Scripts/: fetchRefs.sh
Installation/Jenkins/: build.sh
UnitTests/: unittest.js
arangod/: CMakeLists.txt
arangod/Actions/: actions.cpp  actions.h
arangod/Agency/: ActiveFailoverJob.cpp  AddFollower.cpp  AgencyComm.cpp  AgencyComm.h  AgencyFeature.cpp  Agent.cpp  Agent.h  AgentCallback.cpp  AgentCallback.h  AgentInterface.h  AsyncAgencyComm.cpp  AsyncAgencyComm.h  CleanOutServer.cpp  Compactor.h  Constituent.cpp  FailedFollower.cpp  FailedLeader.cpp  FailedServer.cpp  Inception.cpp  Job.cpp  MoveShard.cpp  Node.cpp  Node.h  RemoveFollower.cpp  RestAgencyHandler.cpp  RestAgencyHandler.h  State.cpp  State.h  Store.cpp  Store.h  Supervision.cpp
arangod/Aql/: AllRowsFetcher.cpp  AllRowsFetcher.h  AqlCall.h  AqlCallList.cpp  AqlItemBlock.cpp  AqlItemBlock.h  AqlItemBlockInputMatrix.cpp  AqlItemBlockInputRange.cpp  AqlItemBlockInputRange.h  AqlItemMatrix.cpp  AqlItemMatrix.h  AqlResult.h  Ast.cpp  Ast.h  AstNode.cpp  AstNode.h  BlockFetcher.cpp  BlockFetcher.h  BlocksWithClients.cpp  BlocksWithClients.h  CalculationExecutor.h  ClusterBlocks.cpp  ClusterNodes.cpp  ClusterNodes.h  ConditionFinder.cpp  ConstFetcher.cpp  ConstFetcher.h  ConstrainedSortExecutor.cpp  CountCollectExecutor.cpp  CountCollectExecutor.h  DependencyProxy.cpp  DependencyProxy.h  DistinctCollectExecutor.cpp  DistinctCollectExecutor.h  DistributeConsumerNode.cpp  DistributeConsumerNode.h  DistributeExecutor.cpp  DistributeExecutor.h  EngineInfoContainerCoordinator.cpp  EngineInfoContainerCoordinator.h  (+104 more)
arangod/Auth/: TokenCache.cpp  UserManager.cpp
arangod/Cache/: Cache.cpp  Manager.cpp  ManagerTasks.cpp  Metadata.h  Table.cpp  TransactionalCache.cpp
arangod/Cluster/: AgencyCache.cpp  AgencyCache.h  ClusterComm.cpp  ClusterComm.h  ClusterEdgeCursor.cpp  ClusterEdgeCursor.h  ClusterFeature.cpp  ClusterInfo.cpp  ClusterInfo.h  ClusterMethods.cpp  ClusterMethods.h  ClusterTraverser.cpp  ClusterTraverser.h  ClusterTrxMethods.cpp  DBServerAgencySync.cpp  FollowerInfo.cpp  HeartbeatThread.cpp  MaintenanceFeature.cpp  MaintenanceWorker.cpp  ReplicationTimeoutFeature.cpp  ServerState.cpp  ServerState.h  SynchronizeShard.cpp  TakeoverShardLeadership.cpp  TraverserEngine.cpp  TraverserEngine.h
arangod/ClusterEngine/: ClusterCollection.cpp  ClusterCollection.h  ClusterEngine.cpp  ClusterIndex.cpp  ClusterIndexFactory.cpp  ClusterRestCollectionHandler.cpp
arangod/GeneralServer/: AcceptorTcp.cpp  AsioSocket.h  AsyncJobManager.cpp  (+14 more)
arangosh/: CMakeLists.txt
cmake/: FindPythonInterp.cmake
lib/: CMakeLists.txt
optimizer-WIP/: CMakeLists.txt
optimizer-WIP/rules/: SortInValuesRule.cpp
optimizer-WIP/src/rules/: SortInValuesRule.cpp  SortInValuesRule.h
optimizer-WIP/src/tests/: linker-fill-ins.cpp  test.cpp
scripts/: countnet.sh  startLocalCluster.sh
test/: main.cpp
tests/: CMakeLists.txt
utils/: cppcheck.sh  generateSwagger.py
(+528 files in other folders)
